--- a/_includes/card_profile_drop_icons.html
+++ b/_includes/card_profile_drop_icons.html
@@ -1,7 +1,7 @@
 <figure class="drop-icons-profile-card" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <img src="{{ include.image }}"/>
   <figcaption>
-    <h3>{{ include.title }}</h3>
+    <h3 toc-skip="true">{{ include.title }}</h3>
     <div class="icons">
       {% include linked_icons.html url=include.url github=include.github email=include.email phone=include.phone %}
     </div>
