--- a/_includes/chat_list.html
+++ b/_includes/chat_list.html
@@ -1,6 +1,6 @@
 <div class="chat">
   <div class="chat-title">
-    <h2>{{ include.title }}</h2>
+    <h2 toc-skip="true">{{ include.title }}</h2>
     <figure class="avatar"><img src="{{ include.avatar }}"></figure>
   </div>
   <div class="messages">
