--- a/_includes/image_overlay_camera.html
+++ b/_includes/image_overlay_camera.html
@@ -5,7 +5,7 @@
   <img src="{{ include.image }}" />
   <figcaption>
     <div class="heading">
-      <h3>{{ include.title }}</h3>
+      <h3 toc-skip="true">{{ include.title }}</h3>
     </div>
     <div class="caption">
       <p>{{ include.subtitle }}</p>
