--- a/_includes/image_overlay_lines.html
+++ b/_includes/image_overlay_lines.html
@@ -2,8 +2,8 @@
   <img src="{{ include.image }}" />
   <div class="title">
     <div>
-      <h2>{{ include.title }}</h2>
-      <h4>{{ include.subtitle}}</h4>
+      <h2 toc-skip="true">{{ include.title }}</h2>
+      <h4 toc-skip="true">{{ include.subtitle}}</h4>
     </div>
   </div>
   <figcaption>
