--- a/_includes/image_overlay_scale_detail.html
+++ b/_includes/image_overlay_scale_detail.html
@@ -2,7 +2,7 @@
   <img src="{{ include.image }}" />
   <figcaption>
     <div class="heading">
-      <h2>{{ include.title }}</h2>
+      <h2 toc-skip="true">{{ include.title }}</h2>
     </div>
     <p>{{ include.desc }}</p>
   </figcaption>
