--- a/_includes/card_post.html
+++ b/_includes/card_post.html
@@ -4,7 +4,7 @@
   </div>
   <figcaption>
     <div class="date"><span class="day">{{ include.day }}</span><span class="month">{{ include.month }}</span></div>
-    <h3>{{ include.title }}</h3>
+    <h3 toc-skip="true">{{ include.title }}</h3>
     <p>{{ include.desc }}</p>
   </figcaption>
   <div class="bottom-footer">
