--- a/_includes/card_post_detailed.html
+++ b/_includes/card_post_detailed.html
@@ -13,8 +13,8 @@
     <!-- Post Content-->
     <div class="post-content">
       <div class="category">{{ include.badge }}</div>
-      <h1 class="title">{{ include.title }}</h1>
-      {% if include.subtitle.size > 0 %}<h2 class="sub_title">{{ include.subtitle }}</h2>{% endif %}
+      <h1 toc-skip="true" class="title">{{ include.title }}</h1>
+      {% if include.subtitle.size > 0 %}<h2 toc-skip="true" class="sub_title">{{ include.subtitle }}</h2>{% endif %}
       <p class="description">{{ include.desc }}</p>
       <div class="post-meta"><span class="timestamp"><i class="fa fa-clock-o"></i>&nbsp;{{ include.date }}</span></div>
     </div>
