--- a/_includes/card_profile_bubble.html
+++ b/_includes/card_profile_bubble.html
@@ -5,8 +5,8 @@
     </div>
   </div>
   <figcaption>
-    <h3>{{ include.title }}</h3>
-    <h4>{{ include.subtitle }}</h4>
+    <h3 toc-skip="true">{{ include.title }}</h3>
+    <h4 toc-skip="true">{{ include.subtitle }}</h4>
     <p>{{ include.desc }}</p>
   </figcaption>
 </figure>
