--- a/_includes/image_overlay_box.html
+++ b/_includes/image_overlay_box.html
@@ -1,8 +1,8 @@
 <figure class="overlay-image-box" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <img src="{{ include.image}}"/>
   <figcaption>
-    <h3>{{ include.title }}</h3>
-    <h5>{{ include.subtitle }}</h5>
+    <h3 toc-skip="true">{{ include.title }}</h3>
+    <h5 toc-skip="true">{{ include.subtitle }}</h5>
     <p>{{ include.desc }}</p>
   </figcaption>
   {% if include.href.size > 0 %}<a href="{{ include.href }}"></a>{% endif %}
