--- a/_includes/image_overlay_drop.html
+++ b/_includes/image_overlay_drop.html
@@ -2,8 +2,8 @@
   <img src="{{ include.image }}"/>
   <img src="{{ include.image }}"/>
   <figcaption class="{{ include.color | default: 'dark' }}">
-    <h3>{{ include.title }}</h3>
-    <!-- <h3>Indigo<span> Violet</span></h3> -->
+    <h3 toc-skip="true">{{ include.title }}</h3>
+    <!-- <h3 toc-skip="true">Indigo<span> Violet</span></h3> -->
     <p>{{ include.desc }}</p>
   </figcaption>
   {% if include.href.size > 0 %}<a href="{{ include.href }}"></a>{% endif %}
