--- a/_includes/image_overlay_fade_framed.html
+++ b/_includes/image_overlay_fade_framed.html
@@ -2,7 +2,7 @@
   <img src="{{ include.image }}"/>
   <div class="inside">
     <figcaption>
-      <h3>{{ include.title }}</h3>
+      <h3 toc-skip="true">{{ include.title }}</h3>
       <p>{{ include.desc }}</p>
     </figcaption>
   </div>
