--- a/_includes/image_overlay_listing.html
+++ b/_includes/image_overlay_listing.html
@@ -1,7 +1,7 @@
 <figure class="overlay-image-listing" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <img src="{{ include.image }}" />
   <figcaption>
-    <h3>{% if include.href.size > 0 %}<a href="{{ include.href }}">{{ include.title }}</a>{% else %}{{ include.title }}{% endif %}</h3>
+    <h3 toc-skip="true">{% if include.href.size > 0 %}<a href="{{ include.href }}">{{ include.title }}</a>{% else %}{{ include.title }}{% endif %}</h3>
     {% if include.items.size > 0 %}
     <ul class="links">
       {% assign items_array = include.items | split: ',' %}
