--- a/_includes/image_overlay_panel.html
+++ b/_includes/image_overlay_panel.html
@@ -4,7 +4,7 @@
     <img src="{{ include.image }}" />
   </div>
   <figcaption>
-    <h3>{{ include.title }}</h3>
+    <h3 toc-skip="true">{{ include.title }}</h3>
     <p>{{ include.desc }}</p>
   </figcaption>
   <span class="read-more">{{ include.readmore | default: "View More" }}&nbsp;<i class="fa fa-arrow-right"></i></span>
