--- a/_includes/image_overlay_simple_scroll.html
+++ b/_includes/image_overlay_simple_scroll.html
@@ -2,11 +2,11 @@
   <img src="{{ include.image }}" />
   <figcaption>
     <div>
-      <h3>{{ include.subtitle }}</h3>
-      <h3>{{ include.scrolltitle }}</h3>
+      <h3 toc-skip="true">{{ include.subtitle }}</h3>
+      <h3 toc-skip="true">{{ include.scrolltitle }}</h3>
     </div>
     <div>
-      <h2>{{ include.title }}</h2>
+      <h2 toc-skip="true">{{ include.title }}</h2>
     </div>
   </figcaption>
   {% if include.href.size > 0 %}<a href="{{ include.href }}"></a>{% endif %}
