drop_down_button

--- a/_includes/button_drop_down.html
+++ b/_includes/button_drop_down.html
@@ -4,7 +4,7 @@
     {% assign dropdown_button_list = include.list | split: ',,' %}
     {% for item in include.list %}
       {% assign item_parts = item | split: '##' %}
-    <a class="dropdown_button_link" href="{{ item_parts.first }}" target="_blank">{{ item_parts.last }}</a>
+    <a class="dropdown_button_link" href="{{ item_parts.last }}" target="_blank">{{ item_parts.first }}</a>
     {% endfor %}
   </div>
 </div>
