--- a/_includes/button_drop_down.html
+++ b/_includes/button_drop_down.html
@@ -2,7 +2,7 @@
   <button class="dropdown_button">{{ include.title }}&nbsp;<i class="fa fa-{{ include.fa }}"></i></button>
   <div class="dropdown_button_list">
     {% assign dropdown_button_list = include.list | split: ',,' %}
-    {% for item in include.list %}
+    {% for item in dropdown_button_list %}
       {% assign item_parts = item | split: '##' %}
     <a class="dropdown_button_link" href="{{ item_parts.last }}" target="_blank">{{ item_parts.first }}</a>
     {% endfor %}
