--- a/assets/css/button_drop_down.css
+++ b/assets/css/button_drop_down.css
@@ -20,10 +20,10 @@
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 9999;
 }
 
-.dropdown_button_list a.dropdown_button_link {
+.dropdown_button_link {
   color: #333;
   padding: 12px 16px;
   text-decoration: none;
@@ -32,14 +32,14 @@
   background-color: #fff;
 }
 
-.dropdownsie-content a.dropdown_button_link:hover {
+.dropdown_button_link:hover {
   background-color: #F8F9FD;
   border: none;
 }
 
 .dropdown_button_wrapper:hover .dropdown_button_list {
   display: block;
-  position: relative;
+  /* position: relative; */
 }
 
 .dropdown_button_wrapper:hover .dropdown_button {
