--- a/assets/css/button_drop_down.css
+++ b/assets/css/button_drop_down.css
@@ -25,16 +25,19 @@
 
 .dropdown_button_link {
   color: #333;
-  padding: 12px 16px;
+  padding: 6px 16px;
   text-decoration: none;
   display: block;
-  border: none;
-  background-color: #fff;
+  background: none;
+  font-size: 16px;
+  border-width: 0;
+  line-height: 20px;
 }
 
 .dropdown_button_link:hover {
-  background-color: #F8F9FD;
-  border: none;
+  background-color: #FFD43B;
+  border-width: 0;
+  border-radius: calc((20px + 6px * 2) * 0.5);
 }
 
 .dropdown_button_wrapper:hover .dropdown_button_list {
