--- a/assets/css/button_drop_down.css
+++ b/assets/css/button_drop_down.css
@@ -35,7 +35,7 @@
 }
 
 .dropdown_button_link:hover {
-  background-color: #FDFDFD !important;
+  background-color: #F1F2F3 !important;
   border: none !important;
 }
 
