grid_image_overlay_simple_scroll_posts_list.html

--- a/_includes/grid_image_overlay_simple_scroll_posts_list.html
+++ b/_includes/grid_image_overlay_simple_scroll_posts_list.html
@@ -7,7 +7,8 @@
 	<!-- element[3]: image -->
 	<!-- element[4]: url -->
 	{% assign tempSubArray = tempSubArray | push: post.title %}
-	{% assign tempSubArray = tempSubArray | push: post.category %}
+	{% assign post_subtitle = post.date | date: "%b %d, %Y" %}
+	{% assign tempSubArray = tempSubArray | push: post_subtitle %}
 	{% assign tempTags = post.tags | join: " #" %}
 	{% assign tempTags_final = '#' | append: tempTags %}
 	{% assign tempSubArray = tempSubArray | push: tempTags_final %}
