--- a/_layouts/album.html
+++ b/_layouts/album.html
@@ -13,7 +13,8 @@ active_title: 'Albums'
 		{% capture this_thumbnail_url %}{% include gallery_media_thumbnail_url.html item=item %}{% endcapture %}
 
 		{% assign this_item = this_item | push: forloop.index %}
-		{% assign this_item = this_item | push: item.url %}
+		{% assign date_formatted = item.date | date: "%b %d, %Y" %}
+    {% assign this_item = this_item | push: date_formatted %}
 		{% assign this_item = this_item | push: this_thumbnail_url %}
 		{% assign this_item = this_item | push: this_media_url %}
 		{% assign this_item = this_item | push: item.type %}
