--- a/assets/css/image_overlay_box.css
+++ b/assets/css/image_overlay_box.css
@@ -12,8 +12,6 @@
   min-width: 250px;
   max-width: 310px;
   width: 100%;
-  background-color: #000000;
-  color: #ffffff;
   text-align: left;
   font-size: 16px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
@@ -81,6 +79,7 @@
   word-wrap: break-all;
   overflow: hidden;
   max-height: 98px;
+  color: #fff;
 }
 
 .overlay-image-box a {
