--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/highlighter.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/footer.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/signature.css">
 
 <!-- Theme -->
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/theme-transition.css">
