--- a/assets/css/window_mac.css
+++ b/assets/css/window_mac.css
@@ -71,3 +71,7 @@ div.window-wrapper {
   border-radius: 5px
   /* border: 1px solid var(--charcoal-gray); */
 }
+
+div.window-wrapper code {
+  color: #000;
+}
