--- a/assets/css/highlighter.css
+++ b/assets/css/highlighter.css
@@ -17,7 +17,7 @@ figure.highlight {
   border-top-right-radius: 6px;
   border: 1px solid var(--charcoal-gray);
   background-image: url("{{ site.url }}{{ site.path.hero.low }}/HERO_TECH_V_0004.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-size: 100% auto;
   -moz-background-size: 100% auto;
   color: #fff;
