--- a/assets/css/alert.css
+++ b/assets/css/alert.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   border: 1px solid #ccc;
   /* margin-bottom: 1.75rem; */
+  margin: 16px auto;
 }
 
 .light div[class='alert'] {
