--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -56,7 +56,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bubble.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_drop_icons.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_quotes.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_simple_white.css>
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_simple_white.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/chat_list.css">
 
 {% for css in page.prelink_css %}
