--- a/_includes/card_profile_simple_white.html
+++ b/_includes/card_profile_simple_white.html
@@ -1,4 +1,4 @@
-<div class="card-profile-simple-white-column">
+<div class="card-profile-simple-white-column" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <div class="card-profile-simple-white-user">
     <div class="card-profile-simple-white-user-avatar"><img src="{{ include.avatar }}" /></div>
     <div class="card-profile-simple-white-user-name">{{ include.name }}</div>
