--- a/_includes/layout_link_js_pre.html
+++ b/_includes/layout_link_js_pre.html
@@ -1,4 +1,6 @@
 <script src="{{ site.url }}{{ site.path.js }}/getquery.js"></script>
+<script src="{{ site.url }}{{ site.path.js }}/back_to_top.js"></script>
+
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 {% for js in page.prelink_js %}
 <script src="{{ js }}"></script>
