--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,6 +30,8 @@ layout: null
 
 <body class="hack {{ site.ui.theme }} main container"{% if page.on_load.call.size > 0 %} onload="{{ page.on_load.call }}"{% endif %}>
 
+  {% include back_to_top.html %}
+
   {% include layout_theme_toggler.html %}
 
   {% unless page.disable_nav == true %}
