--- a/_includes/layout_link_js_after.html
+++ b/_includes/layout_link_js_after.html
@@ -1,4 +1,5 @@
 <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script src="{{ site.url }}{{ site.path.js }}/back_to_top.js"></script>
 
 {% for js in page.afterlink_js %}
 <script src="{{ js }}"></script>
