--- a/_includes/layout_nav.html
+++ b/_includes/layout_nav.html
@@ -1,7 +1,7 @@
 <!-- BEGIN NAVIGATION -->
 <header>
 	<style media="screen">
-	  svg.i-holdcat {
+	  svg.i-icon {
 	    height: 14px;
 	    width: auto;
 			padding: 0;
@@ -14,11 +14,11 @@
 			margin-left: 5px;
 		}
 
-		.dark svg.i-holdcat {
+		.dark svg.i-icon {
 			fill: #fff;
 		}
 
-		.light svg.i-holdcat {
+		.light svg.i-icon {
 			fill: #000;
 		}
 	</style>
