--- a/assets/css/signature.css
+++ b/assets/css/signature.css
@@ -1,15 +1,24 @@
 ---
 layout: null
 ---
-/* .signature-container {
-    height: 150px !important;
-} */
+.signature-container {
+  float: right;
+  max-width: 100%;
+  position: relative;
+}
 
-.signature-container .signature-image {
-  float: right !important;
-  width: 180px !important;
-  height: 150px !important;
-  max-width: 100% !important;
+.signature-container::after {
+  display: block;
+  content: '';
+  padding-bottom: 40%;
+}
+
+.signature-image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .signature-container .signature-image {
