--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -108,14 +108,15 @@ layout: default
 		{% include signature.html %}
 	</div>
 	{% if page.has_action %}
-	<div class="page_actions"><center>
+	<div class="page_actions">
+		<center>
 	<!-- <a onclick="history.back(-1)" class="btn">&lt; Back</a> -->{% if page.next %}<a class="btn" href="{{ site.url }}{{ page.next.url }}index.html">«&nbsp;Newer:&nbsp;{{ page.next.title }}</a>&nbsp;{% endif %}{% if page.next and page.previous%}&nbsp;{% endif %}{% if page.previous %}<a class="btn" href="{{ site.url }}{{ page.previous.url }}index.html">Older:&nbsp;{{ page.previous.title }}&nbsp;»</a>{% endif %}
-	</center></div>
-	{% endif %}
-
-	{% if page.has_info %}
-	<div class="post_info">
-		<hr>
-		<span>Published by {% include label_profile.html title=site.author href="/about/index.html" image="/assets/images/avatar.jpg" %} (<time itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>) in <span itemprop="articleSection"><a href="{{ site.url }}/posts/categories/index.html#{{ page.category | replace: ' ', '_' }}">{{ page.category }}</a></span> and tagged{% for tag in page.tags %} {% assign tag_id = tag | replace: ' ', '_' %}{% assign tag_url = site.url | append: '/posts/tags/#' | append: tag_id %}{% include label_tag.html href=tag_url title=tag %}{% endfor %}.</span>
+		{% if page.has_info %}
+		<div class="post_info">
+			<hr>
+			<span>Published by {% include label_profile.html title=site.author href="/about/index.html" image="/assets/images/avatar.jpg" %} (<time itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>) in <span itemprop="articleSection"><a href="{{ site.url }}/posts/categories/index.html#{{ page.category | replace: ' ', '_' }}">{{ page.category }}</a></span> and tagged{% for tag in page.tags %} {% assign tag_id = tag | replace: ' ', '_' %}{% assign tag_url = site.url | append: '/posts/tags/#' | append: tag_id %}{% include label_tag.html href=tag_url title=tag %}{% endfor %}.</span>
+		</div>
+		{% endif %}
+		</center>
 	</div>
 	{% endif %}
