--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -45,7 +45,7 @@ layout: null
 		<!-- END PAGE CONTENT [BASE] -->
   </main>
   <!-- END PAGE CONTENT -->
-  <br />
+  <br style="clear: both;" />
   {% include layout_footer.html %}
 
   {% include layout_end.html %}
