--- a/_includes/layout_footer.html
+++ b/_includes/layout_footer.html
@@ -1,5 +1,5 @@
 <!-- BEGIN FOOTER -->
-{% assign revision_url = 'https://github.com/LaSenhorita/LaSenhorita.github.io/commit/' | append: site.github.build_revision %}
+{% assign revision_url = site.github_url | append: 'commit/' | append: site.github.build_revision %}
 <footer class="site-footer">
   <div class="footer-content-container">
     <div class="footer-row">
