--- a/_includes/layout_footer.html
+++ b/_includes/layout_footer.html
@@ -37,7 +37,7 @@
 
       <div class="footer-panel-icons">
         <ul class="social-icons">
-          <li class="footer-social-icons-li"><a class="github" href="{{ revision_url }}"><i class="fa fa-github footer-icon-1"></i></a></li>
+          <li class="footer-social-icons-li"><a class="github" href="{{ site.github_url }}"><i class="fa fa-github footer-icon-1"></i></a></li>
           <li class="footer-social-icons-li"><a class="about" href="{{ site.url }}/about/index.html"><i class="fa fa-user footer-icon-2"></i></a></li>
           <li class="footer-social-icons-li"><a class="rss" href="{{ site.url }}/feed.xml"><i class="fa fa-rss footer-icon-3"></i></a></li>
           <li class="footer-social-icons-li"><a class="email" href="mailto:{{ site.email }}"><i class="fa fa-paper-plane footer-icon-4"></i></a></li>
