--- a/_includes/layout_nav.html
+++ b/_includes/layout_nav.html
@@ -1,12 +1,12 @@
 <!-- BEGIN NAVIGATION -->
 <header>
 	<style media="screen">
-	  svg.i-icon {
-	    height: 14px;
-	    width: auto;
+		svg.i-icon {
+			height: 14px;
+			width: auto;
 			padding: 0;
 			margin: 0;
-	  }
+		}
 		.site-navigation-svg-span-left {
 			margin-right: 5px;
 		}
@@ -25,14 +25,14 @@
 	<nav class="site-navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
 		<meta itemprop="name" content="Main Menu">
 		{% for item in site.data.navbar.left %}
-		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} {% if item.onclick.size > 0 %}onclick="{{ item.onclick }}"{% else %}href="{{ site.url }}{{ item.url }}"{% endif %}>{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-left">{{ item.svg }}</span>{% endif %}{% if item.title == 'Home' %}{{ site.name }}{% else %}{{ item.title }}{% endif %}</a>
+		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} {% if item.onclick.size > 0 %}onclick="{{ item.onclick }}"{% else %}href="{{ site.url }}{{ item.url }}"{% endif %}{% if item.target.size > 0 %} target="{{ item.target }}"{% endif %}>{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-left">{{ item.svg }}</span>{% endif %}{% if item.title == 'Home' %}{{ site.name }}{% else %}{{ item.title }}{% endif %}</a>
 		{% endfor %}
 	</nav>
 
 	<nav class="site-navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
 		<meta itemprop="name" content="Utility Menu">
 		{% for item in site.data.navbar.right %}
-		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} {% if item.onclick.size > 0 %}onclick="{{ item.onclick }}"{% else %}href="{{ site.url }}{{ item.url }}"{% endif %}>{{ item.title }}{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-right">{{ item.svg }}</span>{% endif %}</a>
+		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} {% if item.onclick.size > 0 %}onclick="{{ item.onclick }}"{% else %}href="{{ site.url }}{{ item.url }}"{% endif %}{% if item.target.size > 0 %} target="{{ item.target }}"{% endif %}>{{ item.title }}{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-right">{{ item.svg }}</span>{% endif %}</a>
 		{% endfor %}
 	</nav>
 
