--- a/_includes/image_grid.html
+++ b/_includes/image_grid.html
@@ -2,6 +2,6 @@
 {% assign grid_list = grid_list_str | split: ',' %}
 <div class="grid">
 	{% for img in grid_list %}
-	<div class="cell" style="{% include grid_cols_to_style.html cols=include.cols %}"><img src="{{ img }}" style="background-color: #36454f; border-radius: 3px;"></div>
+	<div class="cell" style="{% include grid_cols_to_style.html cols=include.cols %}"><img src="{{ img }}" style="background-color: #36454f; border-radius: 3px; display: block;"></div>
 	{% endfor %}
 </div>
