--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/footer.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/signature.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/gap.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/back_to_top.css">
 
 <!-- Theme -->
