--- a/_includes/signature.html
+++ b/_includes/signature.html
@@ -1,5 +1,7 @@
+{% include gap.html %}
 <!-- START POST SIGNATURE -->
 <div class="signature-container">
 	<img class="signature-image" alt="{{ site.name }} | {{ site.author }}" />
 </div>
 <!-- END POST SIGNATURE -->
+{% include gap.html %}
