--- a/_includes/layout_footer.html
+++ b/_includes/layout_footer.html
@@ -48,10 +48,10 @@
 
       <div class="footer-panel-icons">
         <ul class="social-icons">
-          <li class="footer-social-icons-li"><a class="github" href="{{ site.github_url }}"><i class="fa fa-github footer-icon-1"></i></a></li>
-          <li class="footer-social-icons-li"><a class="book" href="{{ site.url }}/sample/index.html"><i class="fa fa-book footer-icon-2"></i></a></li>
-          <li class="footer-social-icons-li"><a class="rss" href="{{ site.url }}/feed.xml"><i class="fa fa-rss footer-icon-3"></i></a></li>
-          <li class="footer-social-icons-li"><a class="email" href="mailto:{{ site.email }}"><i class="fa fa-paper-plane footer-icon-4"></i></a></li>
+          <li class="footer-social-icons-li"><a class="github" href="{{ site.github_url }}" target="_blank"><i class="fa fa-github footer-icon-1"></i></a></li>
+          <li class="footer-social-icons-li"><a class="book" href="{{ site.url }}/sample/index.html" target="_blank"><i class="fa fa-book footer-icon-2"></i></a></li>
+          <li class="footer-social-icons-li"><a class="rss" href="{{ site.url }}/feed.xml" target="_blank"><i class="fa fa-rss footer-icon-3"></i></a></li>
+          <li class="footer-social-icons-li"><a class="email" href="mailto:{{ site.email }}" target="_blank"><i class="fa fa-paper-plane footer-icon-4"></i></a></li>
         </ul>
       </div>
     </div>
