--- a/_includes/layout_nav.html
+++ b/_includes/layout_nav.html
@@ -7,12 +7,13 @@
 			padding: 0;
 			margin: 0;
 		}
-		.site-navigation-svg-span-left {
+		/* NOT DISPLAY HOME */
+		/* .site-navigation-svg-span-left {
 			margin-right: 5px;
 		}
 		.site-navigation-svg-span-right {
 			margin-left: 5px;
-		}
+		} */
 
 		.dark svg.i-icon {
 			fill: #fff;
