--- a/_includes/layout_nav.html
+++ b/_includes/layout_nav.html
@@ -1,6 +1,6 @@
 <!-- BEGIN NAVIGATION -->
 <header>
-	<style media="screen">
+	<style type="text/css" media="screen">
 		svg.i-icon {
 			height: 14px;
 			width: auto;
