--- a/_includes/layout_head.html
+++ b/_includes/layout_head.html
@@ -22,8 +22,8 @@
 
 <meta title="mod:fractal-forest" content="status:enabled">
 <link rel="alternate" type="application/rss+xml" href="feed.xml" title="{{ site.name }}">
-<link rel="canonical" href="index.html">
-<meta name="theme-color" content=fuchsia>
+<link rel="canonical" href="/index.html">
+<meta name="theme-color" content="fuchsia">
 
 <!-- BEGIN ICONS -->
 <link rel="icon" sizes="128x128" href="{{ icons_folder }}/favicon.ico">
