--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -109,7 +109,7 @@ layout: default
 	{% if page.has_action %}
 	<div class="page_actions">
 		<center>
-	<!-- <a onclick="history.back(-1)" class="btn">&lt; Back</a> -->{% if page.next %}<a class="btn" href="{{ site.url }}{{ page.next.url }}index.html">«&nbsp;Newer:&nbsp;{{ page.next.title }}</a>&nbsp;{% endif %}{% if page.next and page.previous%}&nbsp;{% endif %}{% if page.previous %}<a class="btn" href="{{ site.url }}{{ page.previous.url }}index.html">Older:&nbsp;{{ page.previous.title }}&nbsp;»</a>{% endif %}
+	<!-- <a onclick="history.back(-1)" class="btn">&lt; Back</a> -->{% if page.next %}<a class="btn" href="{{ site.url }}{{ page.next.url }}">«&nbsp;Newer:&nbsp;{{ page.next.title }}</a>&nbsp;{% endif %}{% if page.next and page.previous %}&nbsp;{% endif %}{% if page.previous %}<a class="btn" href="{{ site.url }}{{ page.previous.url }}">Older:&nbsp;{{ page.previous.title }}&nbsp;»</a>{% endif %}
 		{% if page.has_info %}
 		<div class="post_info">
 			<hr>
