--- a/assets/css/theme-dark.css
+++ b/assets/css/theme-dark.css
@@ -336,12 +336,12 @@
 }
 
 /* BEGIN DARK ONLY */
-h1 a:hover,
-h2 a:hover,
-h3 a:hover,
-h4 a:hover,
-h5 a:hover,
-h6 a:hover, {
+.grid-list-section h1 a:hover,
+.grid-list-section h2 a:hover,
+.grid-list-section h3 a:hover,
+.grid-list-section h4 a:hover,
+.grid-list-section h5 a:hover,
+.grid-list-section h6 a:hover, {
   color: #7E9CAB;
 }
 /* END DARK ONLY */
