--- a/assets/css/highlighter.css
+++ b/assets/css/highlighter.css
@@ -700,5 +700,5 @@ div[class^="language-yaml"]::before, figure.highlight pre code[class^="language-
 }
 
 .highlight code {
-  color: #000;
+  color: #fff !important;
 }
