--- a/_layouts/tattoo_side.html
+++ b/_layouts/tattoo_side.html
@@ -13,7 +13,7 @@ layout: tattoo_clean
     <section class="profile">
       <div class="tattoo-row author">
         <div class="tattoo-col author">
-          <img src="{{ site.url }}{{ site.path.images }}/avatar_color.png" style="width: 100%; display: block;">
+          <img src="{{ site.avatar.rect.reverse }}" style="width: 100%; display: block;">
           <div class="abt">
             <h3 class="profile-title">{{ site.author }}</h3>
             <p>{{ site.author }} is a lifestyle blogger who loves to write about his passions of everything. </p>
