--- a/navigator/iOS/style.css
+++ b/navigator/iOS/style.css
@@ -246,6 +246,7 @@ input[type="radio"]:nth-of-type({{ forloop.index }}):checked~.pages .page .bg-bl
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
+  pointer-events: none;
 
   /* 定位 */
   position: absolute;
