--- a/_layouts/navigator.html
+++ b/_layouts/navigator.html
@@ -30,8 +30,7 @@ layout: null
         </div>
         <div class="sidebar-header">
           <div class="user-pic">
-            <!-- <img class="img-responsive img-rounded" src="{{ site.url }}/assets/images/user.jpg" alt="User picture"> -->
-            <img class="img-responsive img-rounded" src="./assets/images/avatar/avatar_color.png" alt="User picture">
+            <img class="img-responsive img-rounded" src="{{ site.url }}/assets/images/avatar/avatar_color.png" alt="User picture">
           </div>
           <div class="user-info">
             <span class="user-name">{{ site.author }}</span>
